Fixed overflow-x on Wine Details Page

--- a/Homework 3/Frontend/src/views/WineDetails/WineDetails.scss
+++ b/Homework 3/Frontend/src/views/WineDetails/WineDetails.scss
@@ -1,3 +1,7 @@
+.wine-details-wrapper {
+    overflow-x: hidden;
+}
+
 .wine-details-container {
 
     &-forwine, &-forwineries {
